<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.rogport.incidenciaciudadano.Activities.AddIncidencia">



        <include android:id="@+id/app_bar"
            layout="@layout/app_bar"></include>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/camara"
                android:layout_gravity="center"
                android:id="@+id/tomarFoto"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <EditText
                android:id="@+id/input_ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ubicacionIncidencia"
                android:layout_marginTop="20dp"
                android:inputType="textLongMessage"
                />
                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/BotonRaised"
                    android:onClick="obtenerUbi"
                    android:background="@drawable/add_location"
                    
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/input_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/descripcionProblema"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                android:maxLines="5"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:theme="@style/BotonRaised"
                android:text="@string/enviarIncidencia"
                android:onClick="subirDatosDB"/>

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
